# llm-inference-optimizer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  gpu_tests.yml
configs/benchmark_configs/: default_sweep.yaml  llama3_8b_sweep.yaml
configs/model_configs/: llama3_70b.yaml  llama3_8b.yaml  tinyllama_1b.yaml
docs/: PROJECT_OVERVIEW.md
docs/benchmarks/: README.md  tinyllama_t4_seq128.csv
notebooks/: 00_colab_setup.ipynb  01_export.ipynb  02_optimize.ipynb  03_benchmark.ipynb  04_analysis.ipynb
requirements/: base.txt  dev.txt  gpu-quant.txt  gpu-serve.txt  gpu.txt
scripts/: make_architecture.py  make_overview_pdf.py  plot_benchmark.py  run_benchmark.sh  setup_colab.sh  setup_local.sh
src/: __init__.py
src/benchmarking/: __init__.py  benchmark_runner.py
src/export/: __init__.py  onnx_exporter.py
src/optimization/: __init__.py  quantization.py  trt_builder.py
src/profiling/: __init__.py  profiler.py
src/serving/: __init__.py  inference_engine.py
src/utils/: config.py  env.py  logger.py
tests/integration/: test_benchmark.py  test_gpu_smoke.py  test_onnx_export.py  test_profiling.py  test_quantization.py  test_serving.py  test_trt_build.py
tests/unit/: test_config.py  test_env.py  test_inference_engine.py  test_logger.py  test_mfu.py  test_onnx_exporter.py  test_profiler.py  test_quantization.py  test_run_sweep.py  test_trt_builder.py
